fixed scroll for more spacing

--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -3,6 +3,10 @@ h1 {
   font-weight: 900;
   letter-spacing: -1.8px;
 
+  @media (max-width: 992px) {
+    font-size: 3.25rem;
+  }
+
   @media (max-width: 450px) {
     font-size: 2.8rem;
   }
